--- a/feladat.html
+++ b/feladat.html
@@ -22,3 +22,7 @@ USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.0<br />
 Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, <b>updated</b>, 392, <a href="https://www.munzee.com/map/udc8vwrpv/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Hyvinkaa.json" target="_blank">json</a><br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, <b>updated</b>, 1171, <a href="https://www.munzee.com/map/9zvxsgvmr/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakewoodPrizewheel.json" target="_blank">json</a><br />
