--- a/feladat.html
+++ b/feladat.html
@@ -46,3 +46,15 @@ USA_USMGoldenEagles, not updated, 0.0<br />
 USA_Turtle, <b>updated</b>, 679, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, <b>updated</b>, 551, <a href="https://www.munzee.com/map/f244tegjx/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauFMGGarden.json" target="_blank">json</a><br />
+Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 1.0<br />
+Belgium_KnokkeHeist, not updated, 0.5<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
+Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.46999999999999886<br />
+Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
+Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
+Slovakia_FlagOfSlovakia, <b>updated</b>, 282, <a href="https://www.munzee.com/map/u2s1v26gn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_FlagOfSlovakia.json" target="_blank">json</a><br />
