--- a/feladat.html
+++ b/feladat.html
@@ -21,3 +21,8 @@ USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.0<br />
 Finland_Nurmijarvi, <b>updated</b>, 245, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Hyvinkaa, not updated, 0.30999999999999517<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, <b>updated</b>, 1180, <a href="https://www.munzee.com/map/9zvxsgvmr/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakewoodPrizewheel.json" target="_blank">json</a><br />
